2007-08-06  Martin Rudalics  <rudalics@gmx.at>

	* help.el (resize-temp-buffer-window): Use window-full-width-p
	instead of comparing frame-width and window-width.

2007-08-05  Peter Povinec  <ppovinec <at> yahoo.com> (tiny change)

	* term.el: Honor term-default-fg-color and term-default-bg-color
	settings when modifying term-current-face.
	(term-default-fg-color, term-default-bg-color): Initialized from
	default term-current-face.
	(term-mode, term-reset-terminal): Set term-current-face with
	term-default-fg-color and term-default-bg-color.
	(term-handle-colors-array): term-current-face has term-default-fg-color
	and term-default-bg-color after reset escape sequence.
	(term-handle-colors-array): Set term-current-color with
	term-default-fg/bg-color instead of ansi-term-color-vector when the
	index (term-ansi-current-color or term-ansi-current-bg-color) is zero.

2007-08-05  Vinicius Jose Latorre  <viniciusig@ig.com.br>

	* printing.el: Require lpr and ps-print when loading printing package.
	Reported by Glenn Morris <rgm@gnu.org>.

2007-08-05  Michael Albinus  <michael.albinus@gmx.de>

	* files.el (set-auto-mode): Handle also remote files wrt
	`auto-mode-alist'.

	* net/tramp.el (tramp-handle-file-remote-p): Return a string as
	remote identification.

2007-08-04  Glenn Morris  <rgm@gnu.org>

	* autorevert.el (auto-revert-tail-mode): auto-revert-tail-pos is
	zero, not nil, when the library is first loaded.  Check for a file
	that has been modified on disk.

	* progmodes/cperl-mode.el (cperl-compilation-error-regexp-alist):
	Remove duplicate defvar preventing initialization.
	(cperl-mode): Fix compilation-error-regexp-alist-alist setting.

2007-08-03  Miles Bader  <miles@gnu.org>

	* vc-hooks.el (vc-handled-backends): Change capitalization of VC
	backend names for new backends to `Git', `Hg', and `Bzr'.
	* vc-hg.el (vc-hg-dired-state-info): Use `Hg' as VC backend name,
	not `HG'.
	* vc-git.el (vc-git-dired-state-info): Use `Git' as VC backend
	name, not `GIT'.