@@ -1,3 +1,8 @@
+2007-08-06  Michael Albinus  <michael.albinus@gmx.de>
+
+	* net/ange-ftp.el (ange-ftp-hook-function): Catch also errors in
+	process-filter.
+
 2007-08-06  Martin Rudalics  <rudalics@gmx.at>
 
 	* help.el (resize-temp-buffer-window): Use window-full-width-p
